# Reptiles

./: Pipfile
avatar_spider/: crawl.py
virus_sample_spider/: README.md  pyproject.toml  virus_crawl.py
virus_sample_spider/record/: catalog.json  decompress_error.json  version.txt
yihai_spider/: yihai_spider.py
