[tool.poetry]
name = "virus_sample_spider"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
aiohttp = "^3.8.1"
lxml = "^4.8.0"
pyquery = "^1.4.3"
py7zr = "^0.18.1"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
